--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@deepgram/sdk": "^3.0.1",
     "axios": "^1.6.3",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
