--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "crypto": "^1.0.1",
     "express": "^4.18.2",
     "mysql2": "^3.6.5",
-    "openai": "^4.24.1"
+    "natural": "^6.10.4",
+    "openai": "^4.24.1",
+    "pdfkit": "^0.14.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.5",
+    "@types/pdfkit": "^0.13.3",
     "dotenv": "^16.3.1",
     "tsc-watch": "^6.0.4",
     "typescript": "^5.3.3"
