--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/natural": "^5.1.5",
     "@types/node": "^20.10.5",
     "@types/pdfkit": "^0.13.3",
     "dotenv": "^16.3.1",
