--- a/package.json
+++ b/package.json
@@ -9,19 +9,25 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@baiducloud/sdk": "^1.0.0-rc.42",
     "@deepgram/sdk": "^3.0.1",
-    "axios": "^1.6.3",
+    "axios": "^1.6.7",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.5",
     "natural": "^6.10.4",
     "openai": "^4.24.1",
-    "pdfkit": "^0.14.0"
+    "pdfkit": "^0.14.0",
+    "qiniu": "^7.11.0",
+    "sharp": "^0.33.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/multer": "^1.4.11",
     "@types/natural": "^5.1.5",
     "@types/node": "^20.10.5",
     "@types/pdfkit": "^0.13.3",
