--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "openai": "^4.24.1",
     "pdfkit": "^0.14.0",
     "qiniu": "^7.11.0",
-    "sharp": "^0.33.2"
+    "sharp": "^0.33.2",
+    "summary": "^2.1.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
@@ -30,6 +31,7 @@
     "@types/multer": "^1.4.11",
     "@types/natural": "^5.1.5",
     "@types/node": "^20.10.5",
+    "@types/node-summary": "^1.2.3",
     "@types/pdfkit": "^0.13.3",
     "dotenv": "^16.3.1",
     "tsc-watch": "^6.0.4",
